# vtzero-dart

./: .gitignore  .gitmodules  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build-native.yml  ci.yml  publish.yml  release.yml  test.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: chart.pbf
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
hook/: build.dart
ios/: vtzero_dart.podspec
ios/Classes/: vtzero_dart.mm
lib/: vector_tile_adapter.dart  vtzero_dart.dart  vtzero_dart_bindings_generated.dart
lib/native/ios/arm64/: libvtzero_dart.dylib
lib/native/ios/x86_64/: libvtzero_dart.dylib
lib/native/macos/arm64/: libvtzero_dart.dylib
lib/native/macos/x86_64/: libvtzero_dart.dylib
lib/src/: vtz_bindings.dart  vtz_exceptions.dart  vtz_feature.dart  vtz_geometry_type.dart  vtz_layer.dart  vtz_property_value.dart  vtz_tile.dart
macos/: vtzero_dart.podspec
macos/Classes/: vtzero_dart.mm
performance_test/: README.md  benchmark_test.dart  download_tiles.dart
scripts/: build_native.dart
src/: CMakeLists.txt  vtzero_dart.c  vtzero_dart.h  vtzero_wrapper.cpp
test/: fixture_helper.dart  fixture_tests.dart  vector_tile_adapter_test.dart  vector_tile_adapter_tests.dart
test/data/: chart.pbf
(+3 files in other folders)
